TasksManager new features implementation
Tasksmanager: Added enabling/disabling feature.

TasksManager: Added max_queue_size feature.

TasksManager: Added task_max_execution_time feature.

TasksManager: Added task context feature.

TasksManager: Added task aborting feature.

CError: Added CError utility class.

Other minor fixes/improves.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "lib",
     "esModuleInterop": true,
     "declaration": true,
-    "declarationDir": "lib_types"
+    "declarationDir": "lib_types",
+    "strict": true,
   },
   "exclude": [ "tmp" ]
 }
