--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crow-lib",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Crow lib",
   "main": "lib/index.js",
   "scripts": {
@@ -15,7 +15,9 @@
     "url": "https://github.com/andranikarakelyan/crow-lib.git"
   },
   "dependencies": {
+    "@types/events": "^3.0.0",
     "@types/lodash.merge": "^4.6.6",
+    "events": "^3.2.0",
     "lodash.merge": "^4.6.2"
   },
   "devDependencies": {
